Fix comment reply form so only displays once on click

--- a/templates/comment_display.html
+++ b/templates/comment_display.html
@@ -44,7 +44,7 @@
 			{# Reply links #}
 			<div class="inline_right">
 				<a class="show_replies" href="{% url 'show_replies' c.id %}">Show replies({{c.children}})</a>&nbsp;
-				<a href="" class="reply">Reply</a>&nbsp;
+				<a class="reply">Reply</a>&nbsp;
 			</div>
 		{% else %}
 			{# Good display if not logged in #}
