Added GZIP middleware for staging

--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -35,7 +35,7 @@
 					<li>No foul language.</li>
 				</ul><br/>
 				<h3>Click on the tabs to the left to learn more about YouTalkEdu!</h3><br/>
-				<h6>Credit to <a href="//twitter.com/theodoremedina">Theodore Medina</a> for the site logo</h6>
+				{# <h6>Credit to <a href="//twitter.com/theodoremedina">Theodore Medina</a> for the site logo</h6> #}
 			</div>
 
 			{# Tab 1 - User types #}
