--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
 		};
 	</script>
 	{% compress css %}
-		<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
-		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"  media="screen">
+		<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" charset="utf-8">
+		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"  media="screen" charset="utf-8">
 	{% endcompress %}
 	{% endblock stylesheets %}
 	<title>
@@ -57,8 +57,8 @@
 		</div>
 		</div>
 		</div>
-		<script src="//code.jquery.com/jquery.js"></script>
-		<script src="{% static 'js/bootstrap.min.js' %}"></script>
+		<script src="//code.jquery.com/jquery.js" type="text/javascript" charset="utf-8"></script>
+		<script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript" charset="utf-8"></script>
 	{% endblock navbar %}
 
 	{% block content %}
