--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load compress %}
 <html>
 <head>
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
@@ -21,8 +22,10 @@
 			}
 		};
 	</script>
+	{% compress css %}
 	<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" charset="utf-8">
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"  media="screen" charset="utf-8">
+	{% endcompress %}
 	{% endblock stylesheets %}
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
