--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
 		};
 	</script>
 	{% compress css %}
-	<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" charset="utf-8">
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"  media="screen" charset="utf-8">
+	<link href="/static/css/base.css %}" rel="stylesheet" type="text/css" charset="utf-8">
+	<link href="/static/css/bootstrap.min.css %}" rel="stylesheet"  media="screen" charset="utf-8">
 	{% endcompress %}
 	{% endblock stylesheets %}
 	<title>
