--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-{% load compressed %}
 <html>
 <head>
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
@@ -22,7 +21,8 @@
 			}
 		};
 	</script>
-	{% compressed_css 'all_css' %}
+	<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" media="screen" charset="utf-8">
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"  media="screen" charset="utf-8">
 	{% endblock stylesheets %}
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
