Added alt text to img, gzipped css bootstrap min

--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -99,7 +99,7 @@
 			<div class="tab-pane fade in" id="tab3">
 				<h3>Any YouTalkEdu user can post on the PIQS page.</h3><br/>
 				<h4>On the PIQS pages, all posts will look like:</h4>
-				<img src="{% static 'img/sample_post.png' %}" /><br/><br/>
+				<img src="{% static 'img/sample_post.png' %}" alt="Sample post picture" /><br/><br/>
 				<ul>
 					<li>Clicking on the post title will bring you to that post's page,
 					on which the content of the post as well as the comments are displayed.</li><br/>
@@ -118,7 +118,7 @@
 				{% endfor %}
 				</h5><br/>
 				<h4>Each post/comment has a vote chart like the following:</h4>
-				<img src="{% static 'img/sample_vote.png' %}" /><br/><br/>
+				<img src="{% static 'img/sample_vote.png' %}" alt="Sampe vote chart" /><br/><br/>
 				<ul>
 					<li>Each vote tube corresponds to a given user type (Red - Students, Blue - Parents, etc).</li><br/>
 					<li>The tubes are percentage based -- they indicate the percentage 
