--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 		};
 	</script>
 	<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" media="screen" charset="utf-8">
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"  media="screen" charset="utf-8">
+	<link href="{% static 'css/bootstrap.min.css.gz' %}" rel="stylesheet" type="text/css"  media="screen" charset="utf-8">
 	{% endblock stylesheets %}
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
