Compressed JS to gz also

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
 		</div>
 		</div>
 		<script src="//code.jquery.com/jquery.js" type="text/javascript" charset="utf-8"></script>
-		<script defer src="{% static 'js/bootstrap.min.js' %}" type="text/javascript" charset="utf-8"></script>
+		<script defer src="{% static 'js/bootstrap.min.js.gz' %}" type="text/javascript" charset="utf-8"></script>
 	{% endblock navbar %}
 
 	{% block content %}
