--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 	{% block stylesheets %}
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" encoding="gzip">
 	<meta name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	{# Good display for all devices #}
 	<script type="text/javascript">
@@ -22,7 +22,8 @@
 		};
 	</script>
 	<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" media="screen" charset="utf-8">
-	<link href="{% static 'css/bootstrap.min.css.gz' %}" rel="stylesheet" type="text/css"  media="screen" charset="utf-8">
+	{# In future -- consider using .gz extension #}
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"  media="screen" charset="utf-8">
 	{% endblock stylesheets %}
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
@@ -55,7 +56,7 @@
 		</div>
 		</div>
 		<script src="//code.jquery.com/jquery.js" type="text/javascript" charset="utf-8"></script>
-		<script defer src="{% static 'js/bootstrap.min.js.gz' %}" type="text/javascript" charset="utf-8"></script>
+		<script defer src="{% static 'js/bootstrap.min.js' %}" type="text/javascript" charset="utf-8"></script>
 	{% endblock navbar %}
 
 	{% block content %}
