Fix validation of learn and faq templates

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,6 +16,10 @@
 	color:#000099;
 }
 
+.space_li {
+	padding-bottom: 15px
+}
+
 /* Templates used on: base_post, post_page */
 .green_checkmark {
 	height:10px; 
