Added meta description tag to templates, added 404 page

--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block head %}
+	<meta name="description" content="Frequently asked questions on YouTalkEdu">
+	{{ block.super }}
+{% endblock head %}
+
 {% block title %}FAQ - YouTalkEdu{% endblock title %}
 
 {% block content %}
