--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block head %}
+	<meta name="description" content="Login to YouTalkEdu">
+	{{ block.super }}
+{% endblock head %}
+
 {% block title %}Login - YouTalkEdu{% endblock title %}
 
 {% block content %}
