--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block head %}
+	<meta name="description" content="Search the posting content of YouTalkEdu">
+	{{ block.super }}
+{% endblock head %}
+
 {% block title %}Search - YouTalkEdu{% endblock title %}
 
 {% block content %}
