--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,8 @@
 {% load staticfiles %}
 <html>
 <head>
+	{% block head %}
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
-	{% block stylesheets %}
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	{# Good display for all devices #}
@@ -24,7 +24,7 @@
 	<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" media="screen">
 	{# In future -- consider using .gz extension #}
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"  media="screen">
-	{% endblock stylesheets %}
+	{% endblock head %}
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
 	</title>
