--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -90,7 +90,7 @@
 				If you have any ideas about how to better the discussion, or just simply want to voice
 				your thoughts on what you like/dislike/want to see, please post here.<br/>
 				<span style="color:red">If you have found any security issues with the site, 
-				PLEASE do not post them here. <a href="Mailto:youtalkedu@gmail.com">Email</a> those to me
+				PLEASE do not post them here. <a href="Mailto:webmaster@youtalkedu.com">Email</a> those to me
 				and I will be forever grateful.</span></p>
 
 			</div>
