--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -5,8 +5,7 @@
 {% block content %}
 	<div class="alert alert-success">
 		<p>Thank you for registering.</p>
-		<p>Check your inbox for a verification email from <span class="obfuscate">"moc.liamg@udeklatuoy"</span>.
-		</p>
+		<p>Please check your inbox for a verification email.</p>
 	</div>
 {% endblock content %}
 
