--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -6,8 +6,7 @@
 
 {% block content %}
 	<div class="alert alert-success">
-		<p>Check your inbox for an email from <span class="obfuscate">"moc.liamg@udeklatuoy"</span>
-		with instructions for reseting your password</p>
+		<p>Check your inbox for an email with instructions for reseting your password.</p>
 		<p>You should be receiving it shortly.</p>
 	</div>
 {% endblock content %}
