--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,7 @@
 <head>
 	{% block head %}
 	{# For Google Analytics #}
-{% comment %}
-	<script defer>
+	<script defer async>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -14,7 +13,6 @@
 		ga('create', 'UA-43570609-1', 'youtalkedu.com');
 		ga('send', 'pageview');
 	</script>
-{% endcomment %}
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
