--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,6 @@
 <html>
 <head>
 	{% block head %}
-	{# For Google Analytics #}
-	<script defer async>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-43570609-1', 'youtalkedu.com');
-		ga('send', 'pageview');
-	</script>
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
@@ -38,6 +28,17 @@
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
 	</title>
+
+	{# For Google Analytics #}
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-43570609-1', 'youtalkedu.com');
+		ga('send', 'pageview');
+	</script>
 </head>
 
 <body>
