Added register to navbar, restructured header on templates

--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
-{% block head %}
+{% block description %}
 	<meta name="description" content="Frequently asked questions on YouTalkEdu">
-	{{ block.super }}
-{% endblock head %}
+{% endblock description %}
 
 {% block title %}FAQ - YouTalkEdu{% endblock title %}
 
