--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -3,10 +3,9 @@
 {% load honeypot %}
 {% load staticfiles %}
 
-{% block head %}
+{% block description %}
 	<meta name="description" content="Join the educational discussion on the {{ page_title }} page at YouTalkEdu">
-	{{ block.super }}
-{% endblock head %}
+{% endblock description %}
 
 {% block title %}{{ page_title }} - YouTalkEdu{% endblock title %}
 
