--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
-{% block head %}
+{% block description %}
 	<meta name="google-site-verification" content="d_A3yuCV1UnQMxAAy0ZJPBvoE1HjA2BXg0owy36Byzg" />
 	<meta name="description" content="An outlet for the discussion and debate of all things education">
-	{{ block.super }}
-{% endblock head %}
+{% endblock description %}
 
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
 
