--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
-{% block head %}
+{% block description %}
 	<meta name="description" content="Login to YouTalkEdu">
-	{{ block.super }}
-{% endblock head %}
+{% endblock description %}
 
 {% block title %}Login - YouTalkEdu{% endblock title %}
 
