--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 <html>
 <head>
-	{% block head %}
+	{% block description %}{% endblock description %}
 	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
@@ -21,10 +21,9 @@
 			}
 		};
 	</script>
+	{# In future -- consider using .gz extension for stylesheets #}
 	<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" media="screen">
-	{# In future -- consider using .gz extension #}
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"  media="screen">
-	{% endblock head %}
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
 	</title>
@@ -63,6 +62,7 @@
 					<li><a href="{% url 'user_page' user=user %}">{{ user.username }}</a></li>
 					<li><a href="{% url 'auth_logout' %}?next={{request.path}}">Logout</a></li>
 				{% else %}
+					<li class="pull-right"><a href="{% url 'register' %}">Register</a></li>
 					<li class="pull-right"><a href="{% url 'login' %}?next={{request.path}}">Login</a></li>
 				{% endif %}
 			</ul>
