--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 {% load dictionary_extras %} {# For dictionary access to variable keys and key content #}
 
-{% block head %}
+{% block description %}
 	<meta name="description" content="The YouTalkEdu user page for {{ user_object.username }}">
-	{{ block.super }}
-{% endblock head %}
+{% endblock description %}
 
 {% block title %}User {{ user_object.username }} - YouTalkEdu{% endblock title %}
 
