Added if gzip to base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load dictionary_extras %}
 <html>
 <head>
 	{% block description %}{% endblock description %}
@@ -21,27 +22,31 @@
 			}
 		};
 	</script>
-	{# In future -- consider using .gz extension for stylesheets #}
 	<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" media="screen">
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"  media="screen">
+	{# Send compressed files if possible #}
+	{% if 'gzip' in request.META|key:'HTTP_ACCEPT_ENCODING' %}
+		<link href="{% static 'css/bootstrap.min.css.gz' %}" rel="stylesheet" type="text/css"  media="screen">
+	{% else %}
+		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"  media="screen">
+	{% endif %}
+
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
 	</title>
 
 	{# For Google Analytics #}
-<script type="text/javascript">
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-43570609-1']);
+		_gaq.push(['_trackPageview']);
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-43570609-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script></head>
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
+</head>
 
 <body>
 	{% block navbar %}
@@ -70,7 +75,12 @@
 		</div>
 		</div>
 		<script src="//code.jquery.com/jquery.js" type="text/javascript"></script>
-		<script defer src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+
+		{% if 'gzip' in request.META|key:'HTTP_ACCEPT_ENCODING' %}
+			<script defer src="{% static 'js/bootstrap.min.js.gz' %}" type="text/javascript"></script>
+		{% else %}
+			<script defer src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+		{% endif %}
 	{% endblock navbar %}
 
 	{% block content %}
