--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
 		</div>
 		</div>
 		</div>
-		<script src="//code.jquery.com/jquery.js" type="text/javascript"></script>
+		<script src="//code.jquery.com/jquery.min.js" type="text/javascript"></script>
 
 		{% if 'gzip' in request.META|key:'HTTP_ACCEPT_ENCODING' %}
 			<script defer src="{% static 'js/bootstrap.min.js.gz' %}" type="text/javascript"></script>
