--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 	<link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" media="screen">
 	{# Send compressed files if possible #}
 	{% if 'gzip' in request.META|key:'HTTP_ACCEPT_ENCODING' %}
-		<link href="{% static 'css/bootstrap.min.css.gz' %}" rel="stylesheet" type="text/css"  media="screen">
+		<link href="{% static 'css/bootstrap.min.css.gz' %}" rel="stylesheet" type="text/css" encoding="gzip"  media="screen">
 	{% else %}
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"  media="screen">
 	{% endif %}
@@ -77,7 +77,7 @@
 		<script src="//code.jquery.com/jquery.min.js" type="text/javascript"></script>
 
 		{% if 'gzip' in request.META|key:'HTTP_ACCEPT_ENCODING' %}
-			<script defer src="{% static 'js/bootstrap.min.js.gz' %}" type="text/javascript"></script>
+			<script defer src="{% static 'js/bootstrap.min.js.gz' %}" encoding="gzip" type="text/javascript"></script>
 		{% else %}
 			<script defer src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
 		{% endif %}
