--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	{% block description %}{% endblock description %}
-	<link rel="icon" type="image/png" href="{% static 'img/logo.png' %}">
+	<link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	{# Good display for all devices #}
