--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,9 @@
 {% block description %}
 	<meta name="google-site-verification" content="d_A3yuCV1UnQMxAAy0ZJPBvoE1HjA2BXg0owy36Byzg" />
 	<meta name="description" content="An outlet for the discussion and debate of all things education">
+	{# Social media scripts #}
+	<script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
+	<script type="text/javascript">stLight.options({publisher: "e4aeda60-7d5c-4350-9ed1-654f18e9d8c9", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 {% endblock description %}
 
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
@@ -22,6 +25,16 @@
 	</div>
 
 	<div class="move_right">
-		<p>Questions? Check out the <a href="{% url 'faq' %}">FAQ</a></p>
+
+	{# Social media tags #}
+	<h4>Get the community involved by sharing us!</h4>
+	<div>
+		<span class='st_facebook_vcount' displayText='Facebook' st_url="null" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
+		<span class='st_twitter_vcount' displayText='Tweet' st_title="I'm making a difference by talking about education on YouTalkEdu.com" st_url="null" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
 	</div>
+	<br/><br/>
+
+	<p><span style="font-weight:bold">Questions?</span> Check out the <a href="{% url 'faq' %}">FAQ</a></p>
+
+	</div> {# end move_right #}
 {% endblock content %}
