--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -5,7 +5,10 @@ You're receiving this e-mail because you requested a password reset for your use
 
 Please go to the following page to create a new password:
 {% block reset_link %}
+{% comment %}
 {{ protocol }}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
+{% endcomment %}
+https://www.YouTalkEdu.herokuapp.com{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
 
 Thanks,
