Changed email link to work now

--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -8,7 +8,7 @@ Please go to the following page to create a new password:
 {% comment %}
 {{ protocol }}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
 {% endcomment %}
-https://www.YouTalkEdu.herokuapp.com{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
+https://YouTalkEdu.herokuapp.com{% url 'django.contrib.auth.views.password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
 
 Thanks,
