Resize image on learn more page

--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -19,8 +19,8 @@
 			{# Default display upon arrival #}
 			<div class="tab-pane fade in active" id="tab0">
 				{#<h1 style="font-family:cursive">Welcome to YouTalkEdu</h1>#}
-				<img src="{% static 'img/welcome.png' %}" width=700px height=200px alt="Welcome to YouTalkEdu" />
-				<h3 style="display:inline-blocK">Where YOU discuss & debate all things education!</h3><br/>
+				<img src="{% static 'img/welcome.png' %}" width=600px height=200px alt="Welcome to YouTalkEdu" />
+				<h3>Where YOU discuss & debate all things education!</h3>
 				<p>If I'm already boring you, just go wander around the site. I won't be upset. Really.</p><br/>
 				<h4>What is YouTalkEdu?</h4>
 				<p>YouTalkEdu is a free-to-use website geared towards bettering the current 
@@ -81,13 +81,13 @@
 
 				<h4>{{ page_type_dict.0.1 }} - Discuss any problems you see in the current educational system here</h4>
 				<p>No specifics!! Phrases such as "Mr. Doe should be fired" or 
-				"Blah High School is failing students" WILL get you banned.</p><br/>
+				"Blah High School is failing students" WILL result in termination of your account.</p><br/>
 				<h4>{{ page_type_dict.1.1 }} - Discuss any ideas which may benefit the educational system here</h4>
 				<p>If you've tried anything to improve education in your school/community, 
 				I STRONGLY encourage you mention it here.</p><br/>
 				<h4>{{ page_type_dict.2.1 }} - Discuss any educational questions worth considering here</h4>
 				<p>Once again, specific questions such as "Why is Mr. Doe so bad?" 
-				WILL get you banned.</p><br/>
+				WILL result in termination of your account.</p><br/>
 				<h4>{{ page_type_dict.3.1 }} - Discuss any thoughts you have about YouTalkEdu</h4>
 				<p>This site was built for the purposes of improving education.
 				If you have any ideas about how to better the discussion, or just simply want to voice
