--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,16 @@
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
 
 {% block content %}
+
+	<div class="alert alert-error">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		<h4>
+			This site is currently in testing. 
+			All content and users will be deleted at the end of the testing period.<br/><br/>
+			YouTalkEdu will be officially released in the next week or two so stay tuned!
+		</h4>
+	</div>
+
 	<div class="hero-unit">
 		<h1>It's time to talk education</h1>
 		<p style="font-size:1.2em">
@@ -33,7 +43,7 @@
 	<div class="move_right">
 
 	{# Social media tags #}
-	<h4>Get the community involved by sharing us!</h4>
+	<h4>Get your community involved by sharing us!</h4>
 	<div>
 		<span class='st_facebook_vcount' displayText='Facebook' st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
 		<span class='st_twitter_vcount' displayText='Tweet' st_title="I'm making a difference by talking about education on #YouTalkEdu" st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
