Graphic moved to home page, minor template moves and changes

--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -53,12 +53,12 @@
 	<ol>
 		<li>The incorrect password is being entered.</li>
 			<p>
-				Fix: Please change your password. You may do so by clicking 
+				<u>Fix:</u> Please change your password. You may do so by clicking 
 				<a href="{% url 'password_reset' %}">here</a>.
 			</p>
 		<li>The incorrect username is being entered.</li>
 			<p>
-				Fix: If you have made any posts/comments on the site, try searching for them and
+				<u>Fix:</u> If you have made any posts/comments on the site, try searching for them and
 				finding the username attached to them.
 {% comment %} If worst comes to worst, you may try 
 					<a href="Mailto:webmaster@youtalkedu.com">emailing me</a>,
@@ -68,7 +68,7 @@
 			</p>
 		<li>The account has been banned.</li>
 			<p>
-				Fix: If you are sure you are entering in the correct username and password,
+				<u>Fix:</u> If you are sure you are entering in the correct username and password,
 				your account is likely banned. 
 				If you haven't posted any ban-worthy material on the site,
 				this is likely the result of someone stealing your password and posting as you. 
