--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,8 @@
 	</div>
 
 	<div class="hero-unit">
-		<h1>It's time to talk education</h1>
+		<img src="{% static 'img/welcome2.png' %}" width=600px height=200px alt="Welcome to YouTalkEdu" />
+		<h1 style="font-size:3.0em">It's time to talk education</h1>
 		<p style="font-size:1.2em">
 			Whether you're a student, teacher, school administrator, parent, or just someone interested 
 			in education, we need <span style="color:red">YOU</span>.	
@@ -50,7 +51,7 @@
 	</div>
 	<br/><br/>
 
-	<p><span style="font-weight:bold">Questions?</span> Check out the <a href="{% url 'faq' %}">FAQ</a></p>
+	<h6>Huge thanks to <a href="//twitter.com/theodoremedina">Theodore Medina</a> for the graphic and favicon!</h6>
 
 	</div> {# end move_right #}
 {% endblock content %}
