Bug on home template on last push

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="hero-unit">
-		<img src="{% static 'img/welcome2.png' %}" width=600px height=200px alt="Welcome to YouTalkEdu" />
+		<img src="{% static 'img/welcome.png' %}" width=600px height=200px alt="Welcome to YouTalkEdu" />
 		<h1 style="font-size:3.0em">It's time to talk education</h1>
 		<p style="font-size:1.2em">
 			Whether you're a student, teacher, school administrator, parent, or just someone interested 
