--- a/templates/home.html
+++ b/templates/home.html
@@ -48,6 +48,8 @@
 	<div>
 		<span class='st_facebook_vcount' displayText='Facebook' st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
 		<span class='st_twitter_vcount' displayText='Tweet' st_title="I'm making a difference by talking about education on #YouTalkEdu" st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
+		<span class='st_googleplus_vcount' displayText='Google +' st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
+		<span class='st_linkedin_vcount' displayText='LinkedIn' st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
 	</div>
 	<br/><br/>
 
