--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,7 @@
 
 /* Templates used on: learn_more */
 .tab-content h3, .tab-content h2, .tab-content h1 {
-	color:#7D5E55; /* Blue: #000099, red-orange: #F54F29 */
+	color:DarkRed; /* Blue: #000099, red-orange: #F54F29, brown: #7D5E55 */
 }
 
 .space_li {
@@ -52,9 +52,9 @@
 }
 
 #id_show_form {
-	font-size:1.5em; 
+	font-size:1.6em; 
 	font-style:italic;
-	/*color:#FF6600;*/
+	color:DarkRed;
 }
 
 #id_show_form:hover {
